Kubernetes/Task_05/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: backend
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
          name: mt-http
