Kubernetes/Task_05/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fronted
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: fronted
        image: nginx:latest
        ports:
        - containerPort: 80
