Kubernetes/Task_05/svc-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-back
spec:
  selector:
    app: back
  ports:
    - name: multitool
      protocol: TCP
      port: 80
      targetPort: 8080
