Kubernetes/Task_05/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
