Kubernetes/Task_05/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: microk8s.example.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-front
            port:
              number: 80
      - path: /app
        pathType: Exact
        backend:
          service:
            name: svc-back
            port:
              number: 80
